--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
 					</div>
 				</section>
 
+				<div class="topnav">
+					<a href="#">Home</a>
+					<a href="#">1</a>
+					<a href="#">2</a>
+					<a href="#">3</a>
+					<a href="#">4</a>
+					<a href="#">5</a>
+				</div>
+
 			<!-- Main -->
 				<div id="main">
 					<div class="inner">
@@ -57,11 +66,12 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="https://youtu.be/lKKsjpH09dU" class="image fit"><img src="http://img.youtube.com/vi/lKKsjpH09dU/mqdefault.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Micro Front-Ends</h3>
+									<p>Micro-frontends let you build a website or web app as a composition of features that you can create 
+										and work on separately. Created by www.freeCodeCamp.org.</p>
+									<a href="https://youtu.be/lKKsjpH09dU" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
