--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</section>
 
 				<div class="topnav">
-					<a href="#">Home</a>
+					<a href="#banner">Home</a>
 					<a href="#">1</a>
 					<a href="#">2</a>
 					<a href="#">3</a>
@@ -68,7 +68,7 @@
 							<div class="box">
 								<a href="https://youtu.be/lKKsjpH09dU" class="image fit"><img src="http://img.youtube.com/vi/lKKsjpH09dU/mqdefault.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Micro Front-Ends</h3>
+									<h3>Micro-frontends</h3>
 									<p>Micro-frontends let you build a website or web app as a composition of features that you can create 
 										and work on separately. Created by www.freeCodeCamp.org.</p>
 									<a href="https://youtu.be/lKKsjpH09dU" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
